Fixed whole page overflow-x and non profile picture bg

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -11,8 +11,10 @@
   box-sizing: border-box;
 }
 
-#root {
-  height: 100%;
+body {
+  width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
@@ -21,8 +23,6 @@ a {
 }
 
 .no-image {
-  width: 100%;
-  height: 100%;
   background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
 }
 
